@@ -2,3 +2,4 @@ sbin_PROGRAMS = upslug2
 upslug2_SOURCES = linux_wire.cc pcap_wire.cc nslu2_image.cc nslu2_upgrade.cc upslug2.cc \
 	nslu2_image.h nslu2_protocol.h nslu2_upgrade.h upslug2_progress.h
 upslug2_LDADD = $(LIBPCAP_LIBS)
+EXTRA_DIST = README.macosx
